# WIF3008-Tello-Drone

./: .breakpoints  colorDetection_basicMovement.py  detect_colour_plus_colour_picker.py  gestures.py  greeting_drone_main.py  pyproject.toml  tello_example.py  test.py  testing2.py
Gesture+Color+UI/: detect_and_move.py  gestures.py  main.py
W11TEST/: GreetingDroneMain2.py  detect_and_move.py  gestures.py
