[tool.poetry]
name = "repl_python3_WIF3008-Tello-Drone"
version = "0.1.0"
description = ""
authors = ["AjwadA <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
djitellopy = "^2.4.0"
tensorflow = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
